[AF] Revert debug logs introduced for flakiness investigation

This CL ~reverts CLs 1373846, 1375731, 1379759, 1377438.

Bug: 911953
Change-Id: I61608248602f48fea0ea753ca5836c2b1b066d63
Reviewed-on: https://chromium-review.googlesource.com/c/1381553
Commit-Queue: Jan Krcal <jkrcal@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#628812}
Former-commit-id: b4351642b76a47020154a3fd1f43203f5ca44a47